feat: Add docker kill script & Add DB deploy scripts
- 도커 자주 배포시 인증오류가 발생하여
우회하기 위해 도커 재설정 스크립트 추가
- DB 배포 스크립트 추가

--- a/mariadb/on_service/stack.yml
+++ b/mariadb/on_service/stack.yml
@@ -2,7 +2,8 @@ version: '3.1'
 
 services:
   db:
-    image: 0.0.0.0:443/mariadb
+    # if use registry server: 0.0.0.0:443/mariadb
+    image: mariadb
     restart: always
     ports: 
       - 3306:3306
