feat: Add deploy script mariadb / mongodb
디비 컨테이너의 필요성과 디비 설정 반복을 줄이기 위한 스크립트 작성
this scripts are deploy DB container to orchestration service or host
mode

- mariadb: deploy to hostmode(docker compose) & service(docker stack
    with service)
- mongodb: deploy to hostmode(docker compose)

Refer to mariadb folder structure

--- a/mariadb/on_docker/.env
+++ b/mariadb/on_docker/.env
@@ -1,4 +1,5 @@
 # This is sample .env
+# Deploy scripts, docker-compose needs this file
 
 # CREDENTIAL
 ROOT_PASS=root
@@ -12,7 +13,7 @@ INTERNAL=3306
 
 # BASIC CONFIGS
 DEPLOY_CONFIG=docker-compose.yml
-DATA=data
+DATA_DIR=data
 DB=mariadb
 DB_CONFIG=my.cnf
 DB_CONFIG_DIR=conf.d
