--- a/mariadb/on_docker/conf.d/my.cnf
+++ b/mariadb/on_docker/conf.d/my.cnf
@@ -47,7 +47,9 @@ port		= 3306
 #
 
 # Encoding: utf8mb4
-default-character-set = utf8mb4
+character-set-client-handshake = false
+character-set-server = utf8mb4
+collation-server = utf8mb4_unicode_ci
 
 # Instead of skip-networking the default is now to listen only on
 # localhost which is more compatible and is not less secure.
