--- a/mariadb/on_docker/docker-compose.yml
+++ b/mariadb/on_docker/docker-compose.yml
@@ -8,8 +8,8 @@ services:
     ports: 
       - ${EXTERNAL}:${INTERNAL}
     volumes:
-      #- ${CURR}/${DB_CONFIG_DIR}:/etc/mysql/conf.d
-      - ${CURR}/${DATA_DIR}:/var/lib/mysql
+      #- ${CURR}/${DATA_DIR}:/var/lib/mysql
+      - ${CURR}/${DB_CONFIG_DIR}/${DB_CONFIG}:/etc/mysql/my.cnf
     environment:
       MYSQL_ROOT_PASSWORD: ${ROOT_PASS} # Must be changed
       MYSQL_USER: ${ADMIN_USER}
