fix: update comment on .env & remove comment on compose

--- a/mariadb/on_docker/.env
+++ b/mariadb/on_docker/.env
@@ -18,5 +18,5 @@ DB=mariadb
 DB_CONFIG=my.cnf
 DB_CONFIG_DIR=conf.d
 
-# FROM BASH
-CURR=/Users/1eedaegon/workspace/coding_practice/storage/storage-container-practice/mariadb/on_docker
+# THIS PATH INSERTED BY: 01_deploy.sh - line: 16
+# CURR=/Users/1eedaegon/workspace/coding_practice/storage/storage-container-practice/mariadb/on_docker
