feat: Initialize postgresql container env

--- a/mariadb/on_docker/.env
+++ b/mariadb/on_docker/.env
@@ -19,4 +19,4 @@ DB_CONFIG=my.cnf
 DB_CONFIG_DIR=conf.d
 
 # THIS PATH INSERTED BY: 01_deploy.sh - line: 16
-# CURR=/Users/1eedaegon/workspace/coding_practice/storage/storage-container-practice/mariadb/on_docker
+CURR=/Users/1eedaegon/workspace/coding_practice/storage/storage-container-practice/mariadb/on_docker
