feat: Add postgresql container deploy scripts
추가로 배시 스크립트 사용법을 복습했다. 엄청나게...

--- a/postgresql/on_docker/.env
+++ b/postgresql/on_docker/.env
@@ -9,7 +9,8 @@ INTERNAL=5432
 # BASIC CONFIGS
 DEPLOY_CONFIG=docker-compose.yml
 DATA_DIR=data
-DB=mariadb
+DB=postgresql
 DB_CONFIG=postgres.conf
-DB_CONFIG_DIR=confg
+DB_CONFIG_DIR=config
 
+CURR=/Users/1eedaegon/workspace/coding_practice/storage/storage-container-practice/postgresql/on_docker
