feat: Add postgresql settings & Add pgadmin container
포스트그레스큐엘 디비 설정파일 추가 및 디비 컨테이너 서비스 이름 재설정
- Add pgadmin4
- fix container service name: mariadb/mongodb/postgresql
- Add manually configure file on postgresql: local/encoding/timezone
- Add some network script(hmm...)

--- a/mariadb/on_docker/docker-compose.yml
+++ b/mariadb/on_docker/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
-  db:
-    container_name: mariadb
+  mariadb:
+    container_name: maria
     # if use registry server: 0.0.0.0:443/mariadb
     image: mariadb:latest
     restart: always
@@ -16,3 +16,7 @@ services:
       MYSQL_PASSWORD: ${ADMIN_PASS}
       MYSQL_DATABASE: ${ADMIN_DB}
       TZ: Asia/Seoul
+
+# networks:
+#   default:
+#     name: maria-network
