--- a/postgresql/on_docker/.env
+++ b/postgresql/on_docker/.env
@@ -1,10 +1,15 @@
 # CREDENTIAL
 ADMIN_USER=admin
 ADMIN_PASS=admin
+ADMIN_DB=order-service
+PG_ADMIN_USER=admin@admin.com
+PG_ADMIN_PASS=admin
 
 # CONTAINER NETWORK
 EXTERNAL=0.0.0.0:5432
 INTERNAL=5432
+PGA_EXTERNAL=8088
+PGA_INTERNAL=80
 
 # BASIC CONFIGS
 DEPLOY_CONFIG=docker-compose.yml
