--- a/mongodb/mongo-compose.yml
+++ b/mongodb/mongo-compose.yml
@@ -2,7 +2,8 @@
 version: '3.1'
 
 services:
-  mongo: 
+  mongodb: 
+    container_name: mongo
     image: mongo
     restart: always
     ports:
@@ -12,6 +13,9 @@ services:
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: root
-      
     # command: 
      # - mongo admin --host localhost:27017 -u root -p root --eval "db.createUser({user:'app',pwd:'app',roles:[{role:'userAdminAnyDatabase',db:'v-tube'}]});"
+     #
+# networks:
+#   default:
+#     name: mongo-network
