feat: Add seperate docker network each DB
DB간의 도커 네트워크 스크립트 추가
- Seperate network each DB with CIDR
- Add custom docker network
- Bind network PostgreSQL and pgAdmin4

--- a/mariadb/on_docker/docker-compose.yml
+++ b/mariadb/on_docker/docker-compose.yml
@@ -17,6 +17,8 @@ services:
       MYSQL_DATABASE: ${ADMIN_DB}
       TZ: Asia/Seoul
 
-# networks:
-#   default:
-#     name: maria-network
+# if use docker network
+networks:
+  default:
+    external: true
+    name: maria-network
