--- a/postgresql/on_docker/.env
+++ b/postgresql/on_docker/.env
@@ -1,7 +1,7 @@
 # CREDENTIAL
 ADMIN_USER=admin
 ADMIN_PASS=admin
-ADMIN_DB=order-service
+ADMIN_DB=admindb
 PG_ADMIN_USER=admin@admin.com
 PG_ADMIN_PASS=admin
 
