--- a/postgresql/on_docker/config/postgres.conf
+++ b/postgresql/on_docker/config/postgres.conf
@@ -18,3 +18,6 @@ client_encoding = 'utf8'
 # https://www.postgresql.org/docs/current/datatype-datetime.html#DATATYPE-TIMEZONES
 # Asia/Seoul 을 기준으로 작성
 timezone = 'Asia/Seoul'
+
+# Connection settings
+# listen_addresses = 'localhost', '172.0.0.0/8'
