--- a/postgresql/on_docker/docker-compose.yml
+++ b/postgresql/on_docker/docker-compose.yml
@@ -25,7 +25,7 @@ services:
      - PGADMIN_DEFAULT_EMAIL=${PG_ADMIN_USER}
      - PGADMIN_DEFAULT_PASSWORD=${PG_ADMIN_PASS}
 
-
-# networks:
-#   default:
-#     name: postgre-network
+networks:
+  default:
+    external: true
+    name: postgres-network
