fix: change postgres config and some comment
delete client encoding & fix listen address
* and fix some comment =]

--- a/postgresql/on_docker/config/postgres.conf
+++ b/postgresql/on_docker/config/postgres.conf
@@ -8,7 +8,7 @@ lc_numeric = 'C'
 lc_time = 'C'
 # Encoding
 # PostgreSQL은 db<->client간 인코딩 변환을 제공한다.
-client_encoding = 'utf8'
+# client_encoding = 'utf8'
 
 # Timezone
 # 세부적으로 봤을 때 PostgreSQL은 내부적으로 윤초계산이 안되므로 GMT만 지원
@@ -20,4 +20,4 @@ client_encoding = 'utf8'
 timezone = 'Asia/Seoul'
 
 # Connection settings
-# listen_addresses = 'localhost', '172.0.0.0/8'
+listen_addresses = 'localhost'
