Add os type check & Add container remove script

--- a/postgresql/on_docker/.env.sample
+++ b/postgresql/on_docker/.env.sample
@@ -11,6 +11,13 @@ INTERNAL=5432
 PGA_EXTERNAL=8088
 PGA_INTERNAL=80
 
+# OS TYPES
+MAC=darwin
+LINUX=linux
+WINDOWS=windows
+MINGW32=mingw32
+MINGW64=mingw64
+
 # BASIC CONFIGS
 DEPLOY_CONFIG=docker-compose.yml
 DATA_DIR=data
