Add os type check to mariadb script

--- a/mariadb/on_docker/.env.sample
+++ b/mariadb/on_docker/.env.sample
@@ -11,6 +11,13 @@ ADMIN_DB=test
 EXTERNAL=0.0.0.0:3306
 INTERNAL=3306
 
+# OS TYPES
+MAC=darwin
+LINUX=linux
+WINDOWS=windows
+MINGW32=mingw32
+MINGW64=mingw64
+
 # BASIC CONFIGS
 DEPLOY_CONFIG=docker-compose.yml
 DATA_DIR=data
