Update dotenv && Remove unused example

--- a/postgresql/on_docker/.env.sample
+++ b/postgresql/on_docker/.env.sample
@@ -1,3 +1,10 @@
+#OS
+MAC=darwin
+LINUX=linux
+WINDOWS=windows
+MINGW32=mingw32
+MINGW64=mingw64
+
 # CREDENTIAL
 ADMIN_USER=admin
 ADMIN_PASS=admin
